# VizBot

./: README.md  main.py  pyproject.toml
backend/interactors/: analyzer.py  db_analyzer.py
backend/routes/: analysis.py  database.py
backend/schemas/: analysis.py  database.py
backend/services/: db_graph.py  db_tools.py  graph.py  llm.py  prompts.py  tools.py
frontend/: app.py
